// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe Mostrar el componente con la imagen del Producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Img"
    className="productImg undefined"
    src="./coffe-mug.png"
  />
</div>
`;

exports[`ProductImage Debe de mostrar el componente correctamnente con la imagen personalizada 1`] = `
<img
  alt="Product Img"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
